2004-08-07  Todd Berman  <tberman@off.net>

	* AssemblyInfo.cs.in: Use new ASSEMBLY_VERSION variable.

2004-06-21  John Luke  <jluke@cfl.rr.com>

	* Tree/TreeView.cs: Scroll to the node when it is selected

2004-06-18  Todd Berman  <tberman@sevenl.net>

	* DragNotebook/DragNotebook.cs: dont emit the event if either the old
	placement or the new is -1, as it isnt a real reorder.

2004-06-18  Todd Berman  <tberman@sevenl.net>

	* DragNotebook/DragNotebook.cs: add an event that gets fired when
	a tab is reordered.
	* TabLabel/TabLabel.cs: try to make this widget unfocusable (untested)

2004-06-17  John Luke  <jluke@cfl.rr.com>

	* FileSelector/FileSelector.cs: a thin wrapper for selecting files
	* Makefile.am: add FileSelector
	* FolderDialog/FileEntry.cs:
	* FolderDialog/FolderDialog.cs: use FileSelector, remove *Sharp usings

2004-06-07  John Luke  <jluke@cfl.rr.com>

	* FileBrowser/FileBrowser.cs: use a toolbar with tooltips
	instead of a hbuttonbox.

2004-06-06  John Luke  <jluke@cfl.rr.com>

	* TabLabel/TabLabel.cs: fix the size of the button to 18 so it is
	not clipped, don't allow the button to expand/fill, make the label
	do so

2004-05-09  Todd Berman  <tberman@sevenl.net>

	* DragNotebook/DragNotebook.cs: notebook from Inigo Illan to add
	dragable reorg of the notebook.
	* Makefile.am: add DragNotebook.cs to build.

2004-04-13  John Luke  <jluke@cfl.rr.com>

	* Navbar/Navbar.cs: switch the address entry to Gnome.Entry
	so we get a little history

2004-04-13  John Luke  <jluke@cfl.rr.com>
	
	* Navbar/Navbar.cs: add a navbar control for the web browser
	removes the clutter in that area

2004-04-03  Todd Berman  <tberman@sevenl.net>

	* Tree/TreeNodeCollection.cs:
	* FileBrowser/FileBrowser.cs:
	* FolderDialog/BaseFileEntry.cs:
	gettextify

2004-03-31  Todd Berman  <tberman@sevenl.net>

	* Tree/TreeNode.cs:
	* Tree/TreeView.cs: Fixing gtk+ 2.4 regression with the change from
	enum to integer. Using RenderIcon to workaround.
